# database/model.js
@@ -23,9 +23,72 @@ var person = sequelize.define('person',
     }
 )
 
+
+
+var author=sequelize.define('author',{
+    authorno: {
+        type: Sequelize.INTEGER,
+        primaryKey: true
+    },
+    name:{
+        type: Sequelize.TEXT,
+        allowNull: false
+    },
+    city:{
+        type: Sequelize.TEXT,
+        allowNull: false
+    }
+},
+
+{
+    timestamps: false,
+    createdAt: false,
+    updatedAt: false
+    }
+
+)
+
+var book=sequelize.define('book',{
+    bookno: {
+        type: Sequelize.INTEGER,
+        primaryKey: true
+    },
+    name:{
+        type: Sequelize.TEXT,
+        allowNull: false
+    },
+    price:{
+        type: Sequelize.FLOAT,
+        allowNull: false
+    },
+    category: {
+        type: Sequelize.TEXT,
+        allowNull: false
+    }
+},
+
+{
+    timestamps: false,
+    createdAt: false,
+    updatedAt: false
+    }
+
+)
+
+author.hasMany(book,{foreigney: 'authorno'})
+book.belongsTo(author)
+
 person.sync ({drop:false}).then(()=>{
     console.log('Person table synched!!!!')
 })
 
+author.sync ({drop:false}).then(()=>{
+    console.log('Author table synched!!!!')
+})
 
-module.exports ={person: person}
+book.sync ({drop:false}).then(()=>{
+    console.log('Book table synched!!!!')
+})
+
+
+module.exports ={person: person,author: author, book: book}
