# swagger.json
@@ -11,7 +11,12 @@
     "tags":[{
         "name": "People",
         "description": "API for people"
-    }],
+    },
+    {
+        "name": "Authors",
+        "description":  "API for authors"
+    } 
+  ],
     "paths": {
       "/api/people":{
         "get": {
@@ -31,6 +36,10 @@
               "in":"body",
               "description": "Person object to be posted",
               "schema":{"$ref":"#/definitions/People"}
+           },{
+              "name": "Authorization",
+              "in": "header",
+              "description":"Bearer token need to based"
            }],
            "produces" : ["application/json"],
            "responses": {
@@ -89,7 +98,39 @@
             }
         }
      }
-    }},
+    },
+    "/newapi/authors": {
+        "get": {
+            "tags": ["Authors"],
+            "summary": "Read All the Author Data",
+            "responses": {
+                "200": {
+                    "description": "OK",
+                    "schema": {"$ref":"#/definitions/Author"}
+                }
+            }
+        },
+        "post":{
+            "tags": ["Authors"],
+            "description": "Adding a new Author",
+            "parameters":[{
+               "name":"author",
+               "in":"body",
+               "description": "Author object to be posted",
+               "schema":{"$ref":"#/definitions/Author"}
+            }],
+            "produces" : ["application/json"],
+            "responses": {
+              "201": {
+                 "description": "New author is created",
+                 "schema": {"$ref":"#/definitions/Author"}
+              }
+            }
+         }
+        
+    }
+
+    },
 
     "definitions": {
         "People":{
@@ -105,6 +146,33 @@
             "properties": {
                 "name": {"type": "string"},
                 "city": {"type":"string"}
+            }
+        },
+        "Author":{
+            "required": ["authorno","name","city"],
+            "properties":{
+                "authorno": {"type":"integer","uniqueItems":true},
+                "name": {"type": "string"},
+                "city": {"type":"string"},
+                "books": {"type":"array",
+                           "items": {
+                              "type": "object",
+                              "properties": {
+                                "bookno":{
+                                    "type":"integer"
+                                },
+                                "name": {
+                                    "type": "string"
+                                },
+                                "price":{
+                                    "type":"float"
+                                },
+                                "category":{
+                                    "type":"string"
+                                }
+                              }
+                           }
+                         }
             }
         },
         "messages": {
